--- a/extras/Projucer/Builds/VisualStudio2017/Projucer_App.vcxproj.filters
+++ b/extras/Projucer/Builds/VisualStudio2017/Projucer_App.vcxproj.filters
@@ -2160,6 +2160,9 @@
     <ClInclude Include="..\..\Source\LiveBuildEngine\jucer_CompileEngineServer.h">
       <Filter>Projucer\LiveBuildEngine</Filter>
     </ClInclude>
+    <ClInclude Include="..\..\Source\LiveBuildEngine\jucer_CompileEngineSettings.h">
+      <Filter>Projucer\LiveBuildEngine</Filter>
+    </ClInclude>
     <ClInclude Include="..\..\Source\LiveBuildEngine\jucer_CppHelpers.h">
       <Filter>Projucer\LiveBuildEngine</Filter>
     </ClInclude>
