--- a/examples/DemoRunner/Builds/Android/app/build.gradle
+++ b/examples/DemoRunner/Builds/Android/app/build.gradle
@@ -19,7 +19,7 @@ android {
     }
 
     defaultConfig {
-        applicationId "com.roli.juce.demorunner"
+        applicationId "com.juce.demorunner"
         minSdkVersion    23
         targetSdkVersion 23
         externalNativeBuild {
