--- a/examples/DemoRunner/Builds/iOS/Info-App.plist
+++ b/examples/DemoRunner/Builds/iOS/Info-App.plist
@@ -12,7 +12,7 @@
     <key>CFBundleExecutable</key>
     <string>${EXECUTABLE_NAME}</string>
     <key>CFBundleIdentifier</key>
-    <string>com.roli.juce.demorunner</string>
+    <string>com.juce.demorunner</string>
     <key>CFBundleName</key>
     <string>DemoRunner</string>
     <key>CFBundleDisplayName</key>
