--- a/examples/DemoRunner/Builds/MacOSX/Info-App.plist
+++ b/examples/DemoRunner/Builds/MacOSX/Info-App.plist
@@ -8,7 +8,7 @@
     <key>CFBundleIconFile</key>
     <string>Icon.icns</string>
     <key>CFBundleIdentifier</key>
-    <string>com.juce.demorunner</string>
+    <string>com.roli.juce.demorunner</string>
     <key>CFBundleName</key>
     <string>DemoRunner</string>
     <key>CFBundleDisplayName</key>
