--- a/examples/DemoRunner/Builds/iOS/Info-App.plist
+++ b/examples/DemoRunner/Builds/iOS/Info-App.plist
@@ -7,12 +7,14 @@
     <true/>
     <key>NSMicrophoneUsageDescription</key>
     <string>This is an audio app which requires audio input. If you do not have a USB audio interface connected it will use the microphone.</string>
+    <key>NSCameraUsageDescription</key>
+    <string>This app requires camera usage to function properly.</string>
     <key>UIViewControllerBasedStatusBarAppearance</key>
     <false/>
     <key>CFBundleExecutable</key>
     <string>${EXECUTABLE_NAME}</string>
     <key>CFBundleIdentifier</key>
-    <string>com.roli.juce.demorunner</string>
+    <string>com.juce.demorunner</string>
     <key>CFBundleName</key>
     <string>DemoRunner</string>
     <key>CFBundleDisplayName</key>
@@ -39,6 +41,7 @@
     <true/>
     <key>UISupportedInterfaceOrientations</key>
     <array>
+      <string>UIInterfaceOrientationPortrait</string>
       <string>UIInterfaceOrientationLandscapeLeft</string>
       <string>UIInterfaceOrientationLandscapeRight</string>
     </array>
