--- a/extras/Projucer/Builds/VisualStudio2015/Projucer_App.vcxproj.filters
+++ b/extras/Projucer/Builds/VisualStudio2015/Projucer_App.vcxproj.filters
@@ -3662,6 +3662,9 @@
     <None Include="..\..\Source\BinaryData\Icons\wizard_StaticLibrary.svg">
       <Filter>Projucer\BinaryData\Icons</Filter>
     </None>
+    <None Include="..\..\Source\BinaryData\Templates\jucer_UnityPluginGUIScript.cs">
+      <Filter>Projucer\BinaryData\Templates</Filter>
+    </None>
     <None Include="..\..\Source\BinaryData\colourscheme_dark.xml">
       <Filter>Projucer\BinaryData</Filter>
     </None>
